syntax = "proto3";
option csharp_namespace = "CecoChat.User.Contracts";
package CecoChat.User.Contracts;
import "google/protobuf/timestamp.proto";

message Connection {
  int64 connection_id = 1;
  google.protobuf.Timestamp version = 2;
  ConnectionStatus status = 3;
  int64 target_user_id = 4;
}

enum ConnectionStatus {
  NOT_CONNECTED = 0;
  PENDING = 1;
  CONNECTED = 2;
}
